# todo-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
scripts/: pre-commit.sh  quality.sh
src/: app.rs  cli.rs  config.rs  domain.rs  main.rs  store.rs
src/server/: error.rs  handler.rs  mod.rs  protocol.rs
src/store/: codec.rs  lock.rs  repository.rs
src/store/tests/: concurrency.rs  mod.rs  parse.rs  repository.rs
tests/: integration.rs  protocol_contracts.rs
tests/integration/: cli.rs  concurrency.rs  resources.rs  signals.rs  tools.rs  wait.rs
tests/support/: fixtures.rs  mod.rs  rpc.rs  session.rs
