[package]
name = "todo-mcp"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmcp = { version = "1.1", features = ["server", "transport-io", "transport-streamable-http-server", "macros", "schemars"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["http1", "tokio", "json"] }
tower-http = { version = "0.6", features = ["limit", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
tempfile = "3"
fs2 = "0.4"
scopeguard = "1"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
proptest = "1"
portpicker = "0.1"

[lints.rust]
unused = "deny"
dead_code = "deny"
